<resources>
    <string name="app_name">AI-Powered Quiz App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">195695649599-aof2shk4kumf9rm9gls398ajp8n6jt2f.apps.googleusercontent.com</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <b><u> Sign Up </u></b></string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="enter_secure_password">Enter secure password</string>
    <string name="e_g_user_example_com">e.g. user@example.com</string>
    <string name="welcome_back_please_sign_in">Welcome Back! Please Sign In</string>
    <string name="get_started_create_your_account">Get Started! Create Your Account</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login">Already have an account? <b><u>Login</u></b></string>
    <string name="register_now">Register Now</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="didn_t_get_the_code_resend">Didn\'t get the code? <u><b>Resend</b></u></string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="_6_digit_code">6-Digit Code</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="continue_with_phone_number">Continue with Phone Number</string>
    <string name="forgot_password_recover">Forgot Password? <b>Recover</b></string>
    <string name="reset_password"><b>Reset Password</b></string>
    <string name="write_your_email">Write your email</string>
    <string name="request_password_reset">Request Password Reset</string>
    <string name="preferences">Preferences</string>
    <string name="step_1_fill_in_course_info_before_uploading_materials">Fill in course info before uploading materials.</string>
    <string name="fill_in_the_form_to_get_your_personalized_quizzes">Fill in the form to get your personalized quizzes</string>
    <string name="course_code_e_g_cs101">Course Code (e.g., CS101)</string>
    <string name="professor"><b>Add course details</b></string>
    <string name="student"><b>Quiz Access Details</b></string>
    <string name="upload_materials"><b>Upload Materials</b></string>
</resources>