<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginPhoneActivity">

    <!-- Toolbar Section -->
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/toolbar_bg_02">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/toolbarBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_white"
            android:background="@android:color/transparent"
            android:padding="15dp"
            app:tint="?attr/colorOnPrimary" />

        <!-- Profile Image -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="15dp"
            android:background="?attr/colorOnPrimary"
            android:src="@drawable/person_black_profile"
            app:shapeAppearanceOverlay="@style/ImageStyle_Circle" />

        <!-- Login Text -->
        <TextView
            android:id="@+id/LoginPhoneLabelTv"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_your_account"
            android:textSize="20sp"
            android:layout_below="@id/profileIv"
            android:layout_centerHorizontal="true"
            android:textColor="?attr/colorOnPrimary" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phoneInputRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:visibility="visible">

        <!-- CountryCodePicker: to pick country code for phone number -->
        <com.hbb20.CountryCodePicker
            android:id="@+id/phoneCodeEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:minWidth="60dp"
            android:minHeight="56dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_defaultNameCode="UZ"
            app:ccp_rememberLastSelection="true"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"
            app:ccp_contentColor="@color/colorGray01" />

        <!-- TextInputLayout: Input phone number -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNumberTil"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/phoneCodeEt"
            android:hint="@string/phone_number"
            app:startIconDrawable="@drawable/phone_black"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp">

            <EditText
                android:id="@+id/phoneNumberEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="50dp"
                android:inputType="phone"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- MaterialButton: Click to send OTP to input phone number -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendOtpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneNumberTil"
            android:layout_marginTop="10dp"
            android:minHeight="@dimen/m_button_height"
            android:text="@string/send_verification_code" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/otpInputRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otpTil"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_6_digit_code"
            app:startIconDrawable="@drawable/phone_black"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="6">

            <EditText
                android:id="@+id/otpEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingStart="50dp"
                android:maxLength="6"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- MaterialButton: Click to verify OTP sent to phone number -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/verifyOtpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/m_button_height"
            android:layout_below="@id/otpTil"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_code" />

        <!-- TextView: Link to resend OTP -->
        <TextView
            android:id="@+id/resendOtpTv"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/verifyOtpBtn"
            android:padding="5dp"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:text="@string/didn_t_get_the_code_resend" />

    </RelativeLayout>

</LinearLayout>