<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/toolbar_bg_02"
        tools:ignore="MissingConstraints">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/toolbarBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_white"
            android:background="@android:color/transparent"
            android:padding="15dp"
            app:tint="?attr/colorOnPrimary" />

        <!-- Profile Image -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="15dp"
            android:background="?attr/colorOnPrimary"
            android:src="@drawable/person_black_profile"
            app:shapeAppearanceOverlay="@style/ImageStyle_Circle" />

        <!-- Login Text -->
        <TextView
            android:id="@+id/ResetPasswordLabelTv"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textSize="23sp"
            android:layout_below="@id/profileIv"
            android:layout_centerHorizontal="true"
            android:textColor="?attr/colorOnPrimary" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@+id/toolbarRL">

        <!-- TextInputLayout: Input account email for password recovery -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/write_your_email"
            app:startIconDrawable="@drawable/email_black"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp">

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="50dp"
                android:inputType="textEmailAddress"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetPasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTil"
            android:layout_marginTop="15dp"
            android:minHeight="60dp"
            android:text="@string/request_password_reset" />

    </RelativeLayout>

</RelativeLayout>