<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StudentFirstFormActivity">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="188dp"
        android:background="@drawable/toolbar_bg_02">

        <ImageButton
            android:id="@+id/toolbarBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_white"
            android:background="@android:color/transparent"
            android:padding="15dp"
            android:layout_marginVertical="45dp"
            app:tint="?attr/colorOnPrimary"/>

        <TextView
            android:id="@+id/toolbarProfessorTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginTop="58dp"
            android:textSize="20sp"
            android:layout_below="@id/profileIv"
            android:textAlignment="center"
            android:paddingHorizontal="70dp"/>

        <!--TextView: Just to show a labeled/instructions text-->
        <TextView
            android:id="@+id/toolbarDescriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fill_in_the_form_to_get_your_personalized_quizzes"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginTop="105dp"
            android:textSize="17sp"
            android:layout_below="@id/profileIv"
            android:textAlignment="center"
            android:paddingHorizontal="70dp"
            tools:ignore="NotSibling" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarRL"
        android:padding="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/studentIdTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Student ID"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:startIconDrawable="@drawable/student_id">

            <EditText
                android:id="@+id/studentIdEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="50dp"
                android:inputType="number"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/subjectCodeTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_code_e_g_cs101"
            android:layout_below="@id/studentIdTil"
            android:layout_marginTop="4dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:startIconDrawable="@drawable/subject_id">

            <EditText
                android:id="@+id/subjectCodeEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="50dp"
                android:inputType="text"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/studentLevelTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/subjectCodeTil"
            android:layout_marginTop="4dp"
            android:hint="Choose Your Level"
            style="@style/TextInput_Dropdown"
            app:startIconDrawable="@drawable/student_level">

            <AutoCompleteTextView
                android:id="@+id/studentLevelAutoTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="50dp"
                android:inputType="none"
                android:focusable="true"
                android:clickable="true"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:dropDownHeight="wrap_content"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/facultyTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/studentLevelTil"
            android:layout_marginTop="4dp"
            android:hint="Which Faculty?"
            style="@style/TextInput_Dropdown"
            app:startIconDrawable="@drawable/student_faculty">

            <AutoCompleteTextView
                android:id="@+id/facultyAutoTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="50dp"
                android:inputType="none"
                android:focusable="true"
                android:clickable="true"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:dropDownHeight="wrap_content"
                tools:ignore="LabelFor,RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--MaterialButton: Click to change password-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueFirstBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/m_button_height"
            android:text="Launch Quiz Now"
            android:textSize="17sp"
            android:layout_below="@id/facultyTil"
            android:layout_marginTop="260dp"/>

    </RelativeLayout>

</RelativeLayout>